--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
